Mon Jan 27 18:07:05 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/t0007.c: check for NULL and empty strings

Mon Jan 27 11:30:34 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/tds/unittests/common.c:
	- workaround for tds_connect and garbage pointer

Sun Jan 26 19:43:18 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/common.c src/ctlib/unittests/common.h:
	* src/ctlib/unittests/connect_fail.c src/ctlib/unittests/t0002.c:
	* src/ctlib/unittests/t0008.c src/ctlib/unittests/t0009.c:
	* src/dblib/unittests/rpc.c src/dblib/unittests/t0012.c:
	* src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c:
	* src/dblib/unittests/t0019.c src/dblib/unittests/t0022.c:
	* src/odbc/unittests/common.c src/odbc/unittests/connect.c:
	* src/odbc/unittests/date.c src/odbc/unittests/print.c:
	* src/odbc/unittests/t0001.c src/odbc/unittests/t0002.c:
	* src/odbc/unittests/t0003.c src/odbc/unittests/t0004.c:
	* src/tds/unittests/t0002.c src/tds/unittests/t0004.c:
	* src/tds/unittests/t0005.csrc/tds/unittests/t0006.c:
	- cleanup for compiling with C++ compiler (unittests)

Sun Jan 26 11:27:51 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/apps/freebcp.c src/apps/tsql.c:
	* src/dblib/bcp.c src/pool/config.c src/pool/stream.c:
	* src/pool/util.c src/server/login.c src/server/query.c:
	* src/tds/convert.c src/tds/query.c src/tds/token.c:
	- cleanup for compiling with C++ compiler (finished)

Sun Jan 26 10:33:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- fix pointer to garbage after tds_connect
	- remove error compiling with C++ compiler

Fri Jan 24 21:33:25 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/config.c applied 1-line patch from Craig A. Berry

Fri Jan 24 17:43:26 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h: add some macro required for Python

Fri Jan 24 16:30:51 CET 2003	Frediano Ziglio <freddy77@angelfire.com>